--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name=author content="ajmalbinnizam">
     <meta name=viewport content="width=device-width,initial-scale=1" />
     <meta http-equiv=X-UA-Compatible content="ie=edge" />
+    <link rel="icon" type="image/png" href="img/products.png"> <!-- Replace with your file path -->
     <link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
         integrity=sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO crossorigin=anonymous>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel=stylesheet>
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;700&display=swap" rel=stylesheet>
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <script src=https://kit.fontawesome.com/3c09bcb51a.js></script>
-    <title>merchlabs.store/</title>
+    <title>merchlabs.store</title>
     <link href="styles/main.css" rel="stylesheet">
 </head>
 
@@ -30,6 +31,7 @@
             </div>
             <div class="col-12 col-md-7 right">
                 <div class=mainInfo>
+                    <h1>MERCHLABS.STORE</h1>
                     <h1>COMING SOON</h1>
                     <p class=slogan>We’re working our way to launch our new merchandise store. Stay tuned for exciting products and exclusive deals! </p>
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
