--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name=author content="ajmalbinnizam">
     <meta name=viewport content="width=device-width,initial-scale=1" />
     <meta http-equiv=X-UA-Compatible content="ie=edge" />
-    <link rel="icon" type="image/png" href="img/products.png"> <!-- Replace with your file path -->
+    <link rel="icon" type="image/png" href="img/tshirt-icon.png"> <!-- Replace with your file path -->
     <link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
         integrity=sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO crossorigin=anonymous>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel=stylesheet>
